# raw_bench

./: .gitattributes  .gitignore  .gitmodules  README.md  download_datasets.py  prepare_moises.py  pyproject.toml  requirements.txt  solver_test.ipynb
configs/: eval.yaml
configs/attack/: attack_loose.yaml  attack_strict.yaml  default.yaml
configs/audioseal/: eval_skeleton.yaml  skeleton.yaml
configs/datapath/: datapath.yaml
configs/dataset/: eval_default.yaml  eval_loose.yaml  eval_strict.yaml
configs/silentcipher/: eval_skeleton.yaml  eval_strict.yaml  skeleton.yaml
configs/timbre/: eval_skeleton.yaml  skeleton.yaml
configs/wavmark/: eval_loose.yaml  eval_skeleton.yaml  eval_strict.yaml  skeleton.yaml
data/: Freischuetz-hash.txt  Freischuetz.txt  air.csv  air_test.csv  air_train.csv  air_val.csv  demand_test.csv  demand_train.csv  demand_val.csv  test.csv  test_dev.csv  test_loose.csv  test_loose_dev.csv  test_perceptual.csv  test_strict.csv  test_strict_dev.csv  train.csv  train_dev.csv  val.csv  val_dev.csv  val_loose.csv  val_loose_audioseal.csv  val_strict.csv  val_strict_audioseal.csv
docs/: README.md  datasets.md  ffmpeg.md  reproduction.md  wandb.md
docs/wm_models/: audioseal.md  silentcipher.md  timbre.md  wavmark.md
raw_bench/: dataloader.py  utils.py
raw_bench/attacks/: __init__.py  compression.py
raw_bench/model/: __init__.py
raw_bench/model/timbre/: README.md  __init__.py  timbre.py
raw_bench/model/timbre/distortions/: dl.py
raw_bench/solver/: __init__.py  audioseal.py  silentcipher.py  timbre.py  timbre.py.example  wavmark.py
(+1 files in other folders)
